tests/conformance/negative/incomplete_optional_match.afr
# MUST fail: optional match missing nothing arm
function maybe(n number) returns number?
    return n
end

create a = maybe(1)
create label = match a
    case value v then v
    end
end
say label
